# AioAllay

./: LICENSE  README.md  README.uk.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aioallay/: __init__.py  client.py
aioallay/types/: AllayVersion.py  AteStata.py  BankCard.py  BaseStata.py  BlockStata.py  CityOrder.py  Command.py  Donate.py  FishStata.py  GameProfile.py  GameSession.py  MobsStata.py  Page.py  PageData.py  Rate.py  RateRequest.py  RateTop.py  Server.py  SimpleMarket.py  Skin.py  TakeCityOrderResponse.py  TopMessages.py  User.py  UserMesageStata.py  UserShort.py  UserTime.py  __init__.py
aioallay/types/ws/: LogsSecurity.py
