[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AioAllay"
version = "0.0.1"
description = "Async client for Minecraft Bedrock Server API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yurii Sulima", email = "yuriisulyma@gmail.com"}
]

keywords = ["dangerous", "library", "python", "minecraft", "allay", "bedrock", "dangerous", "mcapi"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp~=3.10.11",
    "pydantic~=2.11.5"
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/yurasulima/AioAllay"
repository = "https://github.com/yurasulima/AioAllay"
documentation = "https://github.com/yurasulima/AioAllay"
